--- a/package.json
+++ b/package.json
@@ -2,22 +2,6 @@
   "name": "naive-todo",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@craco/craco": "^7.0.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.4",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
-    "antd": "^5.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.3",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
     "prepare": "husky install",
     "start": "craco start",
@@ -48,7 +32,27 @@
       "last 1 safari version"
     ]
   },
+  "dependencies": {
+    "@ant-design/icons": "^4.8.0",
+    "@craco/craco": "^7.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.4",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "antd": "^5.0.3",
+    "nanoid": "^4.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.4",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.3",
+    "web-vitals": "^2.1.4"
+  },
   "devDependencies": {
+    "@bohecola/eslint-config": "^0.1.3",
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "@jsdevtools/version-bump-prompt": "^6.1.0",
@@ -60,6 +64,7 @@
     "eslint": "^8.28.0",
     "eslint-plugin-react": "^7.31.11",
     "husky": "^8.0.2",
-    "lint-staged": "^13.0.4"
+    "lint-staged": "^13.0.4",
+    "sass": "^1.56.1"
   }
 }
