--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-markdown": "^8.0.4",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.3",
@@ -60,6 +62,7 @@
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "conventional-changelog-cli": "^2.2.2",
+    "copy-webpack-plugin": "^11.0.0",
     "cz-customizable": "^7.0.0",
     "eslint": "^8.28.0",
     "eslint-plugin-react": "^7.31.11",
