--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
+    "compression-webpack-plugin": "^10.0.0",
     "conventional-changelog-cli": "^2.2.2",
     "copy-webpack-plugin": "^11.0.0",
     "cz-customizable": "^7.0.0",
