--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "naive-todo",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "scripts": {
     "prepare": "husky install",
@@ -8,7 +8,7 @@
     "build": "craco build",
     "test": "craco test",
     "release": "bump package.json CHANGELOG.md --commit --push --tag --no-verify",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
   "lint-staged": {
     "*.{js,ts,jsx,tsx}": [
