--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "naive-todo",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": true,
   "scripts": {
     "prepare": "husky install",
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "release": "bump package.json CHANGELOG.md --commit --push --tag --no-verify",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
+    "release": "bump --commit --tag --push --all --no-verify",
+    "version": "npm run changelog",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "lint-staged": {
     "*.{js,ts,jsx,tsx}": [
