--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@bohecola/eslint-config": "^0.1.3",
+    "@bohecola/eslint-config": "^0.1.6",
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "@jsdevtools/version-bump-prompt": "^6.1.0",
@@ -70,6 +70,7 @@
     "eslint-plugin-react": "^7.31.11",
     "husky": "^8.0.2",
     "lint-staged": "^13.0.4",
-    "sass": "^1.56.1"
+    "sass": "^1.56.1",
+    "tailwindcss": "^3.3.3"
   }
 }
