fix: action failed

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,7 @@ jobs:
           cd ./build
           git config user.name "bohecola"
           git config user.email "bohecola@outlook.com"
+          git pull
           git add -f CNAME
           git commit -m "chore: add custom domain"
           git push origin gh-pages
