chore: update deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,7 @@ jobs:
           cd ./build
           git config user.name "bohecola"
           git config user.email "bohecola@outlook.com"
+          git config pull.rebase true
           git pull origin gh-pages
           git add -f CNAME
           git commit -m "chore: add custom domain"
