--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,16 +14,30 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Node.js
-        uses: pnpm/action-setup@v2
-        with:
-          version: 7
-          run_install: true
-
-      - uses: actions/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: pnpm
-      - run: pnpm install --frozen-lockfile
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7
+          run_install: false
+
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+  
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      - name: Install dependencies
+        run: pnpm install
 
       - name: Build
         run: pnpm build
@@ -33,19 +47,3 @@ jobs:
         with:
           branch: gh-pages # The branch where the build artifacts will be pushed
           folder: build # The folder containing the build artifacts
-
-      - name: Configure Custom Domain
-        run: |
-          echo 'todo.colax.co' > ./build/CNAME
-          cat ./build/CNAME
-
-      - name: Commit and Push Custom Domain
-        run: |
-          cd ./build
-          git config user.name "bohecola"
-          git config user.email "bohecola@outlook.com"
-          git config pull.rebase true
-          git pull origin gh-pages
-          git add -f CNAME
-          git commit -m "chore: add custom domain"
-          git push origin gh-pages
