--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "antd": "^5.11.2",
+    "lodash-es": "^4.17.21",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -59,6 +60,7 @@
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "@jsdevtools/version-bump-prompt": "^6.1.0",
+    "@types/lodash-es": "^4.17.12",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
