--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.4",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "antd": "^5.11.2",
     "lodash-es": "^4.17.21",
     "nanoid": "^4.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0-rc-cc1ec60d0d-20240607",
+    "react-dom": "^19.0.0-rc-cc1ec60d0d-20240607",
     "react-infinite-scroll-component": "^6.1.0",
     "react-markdown": "^8.0.4",
     "react-router-dom": "^6.4.4",
