chore: upgrade react react-dom

--- a/package.json
+++ b/package.json
@@ -46,12 +46,13 @@
     "antd": "^5.11.2",
     "lodash-es": "^4.17.21",
     "nanoid": "^4.0.0",
-    "react": "^19.0.0-rc-cc1ec60d0d-20240607",
-    "react-dom": "^19.0.0-rc-cc1ec60d0d-20240607",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-markdown": "^8.0.4",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "swr": "^2.2.5",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
